# my-cloud-lib

./: .gitignore  README.md
ansible/playbooks/: setup_vm_dev_env.yaml
pulumi/: pyproject.toml
pulumi/src/my_components/: compute.py
pulumi/src/my_components/scripts/: create_backend.py
